# cookiecutter-poetry

./: ..pylintrc  .pre-commit-config.yaml  Makefile  README.md  cookiecutter.json  mkdocs.yml  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: main.yml  on-release-main.yml
docs/: index.md  prompt_arguments.md  tutorial.md
docs/features/: linting.md  makefile.md
hooks/: post_gen_project.py
scripts/: check_nb_clean.py  install.py
tests/: test_cookiecutter.py
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  tox.ini
{{cookiecutter.project_name}}/.github/workflows/: main.yml
{{cookiecutter.project_name}}/docs/: authors.rst  conf.py  history.rst  index.rst  installation.rst  readme.md  readme.rst
