[tool.poetry]
name = "cookiecutter-poetry"
version = "0.1.0"
description = "A python cookiecutter application to create a new python project that uses poetry to manage its dependencies."
authors = ["Jameson Stillwell"]
repository = "https://github.com/GlobalMin/cookiecutter-poetry.git"
documentation = ""
readme = "README.md"
keywords = ['cookiecutter', 'template', 'poetry']
packages = [
  {include = "cookiecutter_poetry"}
]
include = [
  '{{cookiecutter.project_name}}/**/*',
  'cookiecutter.json',
  'hooks/*'
]

[tool.poetry.dependencies]
python = "^3.11.0"
cookiecutter = "^2.1.1"
nb-clean = "^2.4.0"
nbformat = "^5.7.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pre-commit = "^2.20.0"
pytest-cookies = "^0.6.1"
tox = "^3.25.1"
deptry = "^0.6.4"
ruff = "^0.0.235"
pylint = "2.16.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37']
preview = true

[tool.poetry.scripts]
ccp = 'cookiecutter_poetry.cli:main'

[tool.deptry]
extend_exclude = [
  "{{cookiecutter.project_name}}"
]
ignore_obsolete = ["cookiecutter"]

[tool.ruff]
target-version = "py37"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
