[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "0.0.1"
description = "{{cookiecutter.project_description}}"
authors = ["{{cookiecutter.author}} <f{{cookiecutter.email}}>"]
repository = "https://github.com/{{cookiecutter.author_github_handle}}/{{cookiecutter.project_name}}"
documentation = "https://{{cookiecutter.author_github_handle}}.github.io/{{cookiecutter.project_name}}/"
readme = "README.md"
packages = [
  {include = "{{cookiecutter.project_slug}}"}
]

[tool.poetry.dependencies]
python = ">=3.8,<=3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
{% if cookiecutter.deptry == 'y' -%}
deptry = "^0.6.4"
{% endif -%}
pre-commit = "^2.20.0"
tox = "^3.25.1"
pylint = "2.16.1"
Sphinx = ">=4"
myst-parser = "^0.18.1"
furo = "^2022.12.7"

[tool.poetry.group.datascicence.dependencies]
pandas = "1.5.3"
numpy = "1.24.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37']
preview = true